--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ mysql-connector-python = "^8.0.28"
 Flask-Admin = "^1.6.0"
 sqlacodegen = "^2.3.0"
 Flask-Login = "^0.6.0"
+Flask-WTF = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
