--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ Flask-Admin = "^1.6.0"
 sqlacodegen = "^2.3.0"
 Flask-Login = "^0.6.0"
 Flask-WTF = "^1.0.1"
+WTForms = {extras = ["email"], version = "^3.0.1"}
+email-validator = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 
