--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = ["Hazel Lynn James"]
 python = "^3.10"
 Flask = "^2.1.1"
 python-dotenv = "^0.20.0"
-Flask-SQLAlchemy = "^2.5.1"
 mysql-connector-python = "^8.0.28"
 Flask-Admin = "^1.6.0"
 sqlacodegen = "^2.3.0"
@@ -18,6 +17,7 @@ WTForms = {extras = ["email"], version = "^3.0.1"}
 email-validator = "^1.1.3"
 Flask-Breadcrumbs = "^0.5.1"
 jupyterlab = "^3.4.0"
+WTForms-SQLAlchemy = "^0.3"
 
 [tool.poetry.dev-dependencies]
 
