--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,11 @@ email-validator = "^1.1.3"
 Flask-Breadcrumbs = "^0.5.1"
 jupyterlab = "^3.4.0"
 WTForms-SQLAlchemy = "^0.3"
-black = "^22.3.0"
+flake8 = "^4.0.1"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
+yapf = "^0.32.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
