--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ Flask-CKEditor = "^0.4.6"
 [tool.poetry.dev-dependencies]
 yapf = "^0.32.0"
 flake8 = "^4.0.1"
+pylint = "^2.13.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
