--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.linting.flake8Enabled": false,
-    "python.linting.enabled": true,
+    "python.linting.enabled": false,
     "python.formatting.provider": "yapf",
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": false,
+    "python.linting.pycodestyleEnabled": true
 }
