--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Hazel Lynn James"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8"
 Flask = "^2.1.1"
 python-dotenv = "^0.20.0"
 mysql-connector-python = "^8.0.28"
@@ -16,6 +16,7 @@ email-validator = "^1.1.3"
 WTForms-SQLAlchemy = "^0.3"
 toml = "^0.10.2"
 Flask-CKEditor = "^0.4.6"
+Flask-Mail = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.32.0"
